	All notable changes to this project will be documented in this file.

	* 0.3.0 - preview

	Add
	- Make the comment line not splitted, keep it is.

	Fix
	- Stop spliting the whitespaces in the strings (simple version).

	* 0.2.0 - Nov 17th, 2019

	Added
	- GNU Emacs integration for the simple script.
	- Add specific `;; section_end` string as end of section flag,
	  in this case, the idnention will be reset after this line.

	Updated
	- Change the behavior for reading source from stdin to reading a
	  source file as command line parameter.

	* 0.1.0 - Nov 17th, 2019

	Added
	- Sekelton of the script, to read the source code as stdin, and
	  output the simple formatted script as stdout.
	- Corresponding Github workflow configuration of the project.